refactor experience pools for more efficient storage and access